--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="title">Shibuya Traffic Light System</div>
             <p class="desc">A microcontroller-based simulation of the Shibuya Crossing traffic light system with state-driven control.</p>
           </div>
-          <span class="badge">Simulation</span>
+          <span class="badge">STM32</span>
         </div>
       </a>
     </div>
