--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <p class="desc">Reinforcement learning-based self-balancing robot.</p>
           </div>
           <span class="badge">Sim2Real</span>
+          <span class="badge">Python</span>
         </div>
       </a>
 
@@ -144,6 +145,8 @@
             <p class="desc">Built an autonomous vehicle using embedded systems and sensor integration.</p>
           </div>
           <span class="badge">STM32</span>
+          <span class="badge">C++</span>
+          <span class="badge">Sensor Fusion</span>
         </div>
       </a>
 
@@ -157,6 +160,7 @@
             <p class="desc">Face + hand-gesture fusion to trigger actions.</p>
           </div>
           <span class="badge">CV</span>
+          <span class="badge">Python</span>
         </div>
       </a>
 
@@ -171,6 +175,7 @@
           </div>
           <span class="badge">CoppeliaSim</span>
           <span class="badge">PyQt5</span>
+          <span class="badge">Python</span>
         </div>
       </a>
 
@@ -188,6 +193,7 @@
             <p class="desc">Simulated an automated pick-and-place process using the Dobot Magician robotic arm in CoppeliaSim.</p>
           </div>
           <span class="badge">CoppeliaSim</span>
+          <span class="badge">LUA</span>
         </div>
       </a>
     
@@ -205,6 +211,7 @@
             <p class="desc">A voice-controlled bricklaying robot prototype with precise manipulation capabilities.</p>
           </div>
           <span class="badge">Robotics</span>
+          <span class="badge">Python</span>
         </div>
       </a>
 
@@ -221,7 +228,9 @@
             <div class="title">Wireless Zigbee Communication</div>
             <p class="desc">Implemented secure wireless communication between STM32 microcontrollers using Zigbee modules.</p>
           </div>
+          <span class="badge">STM32</span>
           <span class="badge">IoT</span>
+          <span class="badge">C++</span>
         </div>
       </a>
 
@@ -239,6 +248,8 @@
             <p class="desc">A Raspberry Pi–based system that processes sensor inputs to control an actuator in real time.</p>
           </div>
           <span class="badge">Embedded</span>
+          <span class="badge">RaspberryPi</span>
+          <span class="badge">Python</span>
         </div>
       </a>
 
@@ -256,6 +267,8 @@
             <p class="desc">A microcontroller-based simulation of the Shibuya Crossing traffic light system with state-driven control.</p>
           </div>
           <span class="badge">STM32</span>
+          <span class="badge">IoT</span>
+          <span class="badge">C++</span>
         </div>
       </a>
     </div>
